fix spacing and add missing class styles to div

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
   color: midnightblue;
   font-family: 'Poppins', sans-serif;
 }
-
 .header {
   min-height: 50vh;
   background-image: linear-gradient(45deg, orchid, white);
@@ -23,6 +22,7 @@ body {
 .bob {
   opacity: 0.80;
   object-fit: fill;
+  display: block;
 }
 .result {
   max-width: 60vw;
@@ -37,7 +37,7 @@ body {
   padding: 1rem;
 }
 .result h2 {
-  font-size: 3rem;
+  font-size: 5rem;
 }
 .result-img {
   object-fit: fill;
@@ -47,20 +47,20 @@ body {
   padding: .5rem;
   margin: 1rem;
 }
-
 button { 
   width: 8rem;
   height: 4rem;
   display: block;
   margin: auto;
 }
-
 .question {
   font-size: 1.5rem;
   display: block;
   text-align: center;
 }
-
+.drag-name {
+  font-size: 2.5rem;
+}
 .answer {
   display: block;
   max-width: 10rem;
